--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/phone.css" 
     media="only screen and (max-device-width: 480px)" >
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/slidify.css" >
-  <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />
+  <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/solarized_light.css" />
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="libraries/widgets/bootstrap/css/bootstrap.css"></link>
 <link rel=stylesheet href="./assets/css/ribbons.css"></link>
 
@@ -35,23 +35,19 @@
   <hgroup class="auto-fadein">
     <h1>Developing Data Products Project</h1>
     <h2>Data Science Specialization</h2>
-    <p>Sergio-Feliciano Mendoza-Barrera<br/>Learner</p>
+    <p>Sergio-Feliciano Mendoza-Barrera<br/>https://jaalkab.shinyapps.io/TwitterMapShinyApp</p>
   </hgroup>
+    <a href="https://github.com/smendozabarrera/DevelopingDataProducts_SFMB/zipball/gh-pages" class="example">
+     Download
+    </a>
   <article></article>  
 </slide>
     
 
     <!-- SLIDES -->
-    <slide class="" id="slide-1" style="background:;">
-  <hgroup>
-    <h2>Read-And-Delete</h2>
-  </hgroup>
+    <slide class="segue quote dark" id="slide-1" style="background:;">
   <article data-timings="">
-    <ol>
-<li>Edit YAML front matter</li>
-<li>Write using R Markdown</li>
-<li>Use an empty line followed by three dashes to separate slides!</li>
-</ol>
+    <iframe src = 'https://jaalkab.shinyapps.io/TwitterMapShinyApp/' height='600px'></iframe>
 
   </article>
   <!-- Presenter Notes -->
@@ -59,10 +55,102 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Slide 2</h2>
+    <h2>Shiny advantages and cons</h2>
   </hgroup>
   <article data-timings="">
-    
+    <h3>Advantages</h3>
+
+<ul>
+<li>Shiny is one of the easiest ways to develop useful and data based
+applications without web development knowledge.</li>
+<li>Support online demos</li>
+<li>Empowered by Javascript and CSS!</li>
+</ul>
+
+<h3>Cons</h3>
+
+<ul>
+<li>Shiny server have tricky details in the installation and
+configuration process.</li>
+<li>R in the server package installation have some permission issues if
+you do not have root access.</li>
+<li>Debugging issues at the server side.</li>
+</ul>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>UI code</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">## fitshinyUI(bootstrapPage(
+##     tags$link(href=&#39;style.css&#39;, rel=&#39;stylesheet&#39;),
+##     tags$script(src=&#39;app.js&#39;),
+##     includeHTML(&#39;www/credits.html&#39;),
+##     fluidRow(
+##         column(3,
+##                p(&#39;*** Please enter your username, then submit.&#39;),
+##                p(&#39;*** Please wait after submit...&#39;),
+##                textOutput(&#39;minibuffer&#39;),
+##                textOutput(&#39;minibufferUser&#39;)  ),
+## ...
+##                textInput(&quot;userName&quot;, label =
+##                              h4(&quot;Enter your username&quot;), value =
+##                                  &quot;mitxalumni&quot;),
+##                actionButton(&quot;SubmitButton&quot;, &quot;Submit&quot;)
+##                )
+##         ),
+##         mapOutput(&#39;map_container&#39;)  ))
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Server code</h2>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="r">## require(shiny)
+## require(rCharts)
+
+## shinyServer(function(input, output, session){
+
+##     observeEvent(input$SubmitButton, {
+
+##          output$minibuffer &lt;- renderText(&quot;*** Loading Twitter data, please wait...:&quot;)
+
+##          output$map_container &lt;- renderMap({
+##              output$minibuffer &lt;- renderText(&quot;*** Network map for:&quot;)
+##              output$minibufferUser &lt;- renderText(input$userName)
+##              plotMap(input$userName)
+
+##      })
+##  })
+## })
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="segue quote dark" id="slide-5" style="background:;">
+  <hgroup>
+    <h2>Thank you for these great courses</h2>
+  </hgroup>
+  <article data-timings="">
+    <p><q>&quot;Shiny is a great tool for Data Science presentations. @smendozab&quot;</q></p>
+
+<style>
+.dark q {
+  color: white;
+}
+</style>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -73,14 +161,32 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Read-And-Delete'>
+        data-slide=1 title=''>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Slide 2'>
+        data-slide=2 title='Shiny advantages and cons'>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='UI code'>
+         3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Server code'>
+         4
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=5 title='Thank you for these great courses'>
+         5
       </a>
     </li>
   </ul>
